<resources>
    <string name="app_name">practice</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_age" />
    <string name="enter_your_name" />
    <string name="enter_age">Введите возраст:</string>
    <string name="reset">Сбросить</string>
    <string name="send">Отправить</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="enter_gender">Выберите пол:</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_n_name">Введите имя:</string>
    <string name="your_name">Ваше имя:</string>
    <string name="your_age">Ваш возраст:</string>
    <string name="your_gender">Ваш пол:</string>
    <string name="background">Сменить фон</string>
    <string name="next">Перейти</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="one">TODO</string>
    <string name="two">TODO</string>
    <string name="three">TODO</string>
    <string name="four">TODO</string>
    <string name="seven">TODO</string>
    <string name="six">TODO</string>
    <string name="five">TODO</string>
    <string name="dog">dog</string>
    <string name="dog1">dog</string>
</resources>